# hse-chat-server-app

./: CMakeLists.txt  README.md
client/: chat_client.cpp  client.cpp  client.hpp
common/: protocol.hpp
server/: chat_server.cpp  server.cpp  server.hpp
tests/: test_client.cpp  test_server.cpp
